--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
   --nasa: #03112C;
   --rela: #212529;
   --ta: #6CADDE;
+  --text-color: #212529;
 }
 
 @font-face {
